force-app/main/default/objects/Quote_Approval_Priority_Setting__mdt/Quote_Approval_Priority_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Quote Approval Priority Setting</label>
    <pluralLabel>Quote Approval Priority Settings</pluralLabel>
</CustomObject>