force-app/main/default/objects/Quote_Approval_Priority_Setting__mdt/fields/Is_Deactivated__c.field-meta.xml
<CustomField>
    <fullName>Is_Deactivated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Deactivated</label>
    <type>Checkbox</type>
</CustomField>