force-app/main/default/objects/Quote_Approval_Priority_Setting__mdt/fields/Source_API_Field__c.field-meta.xml
<CustomField>
    <fullName>Source_API_Field__c</fullName>
    <label>Source API Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>